--- a/assets/frontend/css/global.css
+++ b/assets/frontend/css/global.css
@@ -28,7 +28,7 @@ canvas#spiders {
     left: 0;
 }
 
-#head-panel {
+#INSCRIPTION {
     border: 1px solid #cbcbcb;
     padding: 34px;
     background: white;
@@ -39,6 +39,21 @@ canvas#spiders {
     left: 0;
     margin-top: 100px;
     margin-left: 62%;
+    z-index: 1;
+    position: absolute;
+}
+
+#CONNEXION {
+    border: 1px solid #cbcbcb;
+    padding: 34px;
+    background: white;
+    border-radius: 5px;
+    width: 32%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    margin-top: 100px;
+    margin-left: 12%;
     z-index: 1;
 }
 
